create: file structure of style

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,3 +1,6 @@
-body
-  background-color: #fff
-  
+// Подключение переменных
+@import 'var'
+// Подключение базовых настроек
+@import 'settings'
+// Cтили для блока header
+@import 'blocks/header'
