--- a/sass/style.sass
+++ b/sass/style.sass
@@ -2,5 +2,7 @@
 @import 'var'
 // Подключение базовых настроек
 @import 'settings'
+// Подключение normalize
+@import 'normalize'
 // Cтили для блока header
 @import 'blocks/header'
