--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -8,7 +8,25 @@
     padding-bottom: 40px
   &__search
     margin-right: auto
-    margin-left: 108px
+    margin-left: 9.73%
+  &-bottom
+    background-color: $dark
+  &-menu
+    display: flex
+    align-items: center
+    justify-content: space-between
+    list-style-type: none
+    margin: 0
+    padding: 31px 0
+    color: $light
+    &__link
+      color: inherit
+      text-decoration: none
+      text-transform: uppercase
+      font-size: 14px
+      line-height: 18px
+.logo
+  width: 177px
 .search
   display: flex
   position: relative
