--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -9,13 +9,15 @@
       padding: 30px auto
     &__search
       margin-left: auto
-      max-width: 340px
     &-menu
       padding-top: 23px
       padding-bottom: 23px
       &__link
       font-size: 12px
       line-height: 15px
+  .search
+    &__input
+      width: 340px
   .logo
     width: 132px
 @media (max-width: 768px)
@@ -29,6 +31,7 @@
       display: flex
       width: 16px
       height: 11px
+      padding: 0
       align-items: center
       justify-content: space-between
       flex-direction: column
