--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -6,7 +6,7 @@
     max-width: 700px
   .navbar
     &-top
-      padding: 30px auto
+      padding: 30px 0
     &__search
       margin-left: auto
     &-menu
