fix: container at max-widht 576px

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -44,6 +44,8 @@
         height: 1px
         background-color: $text-color
 @media (max-width: 576px)
+  .container
+    max-width: 280px
   .logo
     width: 99px
   
