--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -29,6 +29,13 @@
     margin: 0
     font-size: 12px
     line-height: 15px
+  &-grid
+    display: flex
+    justify-content: space-between
+  &-right
+    display: flex
+    flex-direction: column
+    justify-content: space-between
 .stars
   flex-basis: 100%
 .rating
@@ -81,4 +88,91 @@
     &--prev
       left: 18px
       background-image: url(../image/arrow-prev.svg)
+.booking
+  background: $dark
+  color: $light
+  border-radius: 8px
+  padding: 28px
+  width: 350px
+  min-height: 210px
+  &__info
+    display: flex
+    justify-content: space-between
+  &__price
+    display: flex
+    flex-direction: column
+  &__start
+    font-weight: normal
+    font-size: 10px
+    line-height: 14px
+  &__pricetag
+    font-style: normal
+    font-weight: 800
+    font-size: 24px
+    line-height: 33px
+  &__per-room
+    font-style: normal
+    font-weight: normal
+    font-size: 12px
+    line-height: 16px
+  &__room
+    margin-top: 4px
+  &__text
+    display: flex
+    align-items: center
+    justify-content: space-between
+    margin-bottom: 8px
+    font-style: normal
+    font-weight: normal
+    font-size: 12px
+    line-height: 16px
+  &__description
+    margin-left: 9px
+  &__call-center
+    display: flex
+    align-items: center
+    justify-content: space-between
+    margin-top: 8px
+    margin-bottom: 17px
+  &__heading
+    font-weight: 600
+    font-style: normal
+    font-size: 18px
+    line-height: 25px
+  &__link
+    display: flex
+    align-items: center
+    justify-content: space-between
+    color: inherit
+    text-decoration: none
+  &__number
+    margin-left: 8px
+    font-style: normal
+    font-weight: 600
+    font-size: 18px
+    line-height: 25px
+  &__button
+    width: 100%
+    min-height: 45px
+    background-color: $primary
+    color: inherit
+    border: none
+    border-radius: 4px
+    font-style: normal
+    font-weight: 600
+    font-size: 14px
+    line-height: 19px
+    cursor: pointer
+.map
+  width: 347px
+  height: 213px
+  border-radius: 10px
+  background-color: #000
+
+
+
+
+
+  
+  
 
