--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,6 +1,14 @@
 @media (max-width: 1200px)
   .container
     max-width: 960px
+  .slider
+    width: 590px
+  .swiper
+    &-slide
+      &__image
+        width: 100%
+        height: 100%
+        object-fit: cover
 @media (max-width: 992px)
   .container
     max-width: 700px
@@ -20,6 +28,19 @@
       width: 340px
   .logo
     width: 132px
+  .hotel
+    &-grid
+      flex-direction: column
+    &__slider
+      margin-bottom: 30px
+    &-right
+      flex-direction: row
+  .slider
+    width: 100%
+  .booking
+    width: 340px
+  .map
+    width: 340px
 @media (max-width: 767px)
   .container
     max-width: 576px
@@ -58,6 +79,16 @@
       &__offer
         order: -1
         margin-left: 0
+  .slider
+    height: 350px
+  .hotel
+    &-right
+      flex-direction: column
+      min-height: 450px
+  .booking
+    width: 100%
+  .map
+    width: 100%
 @media (max-width: 576px)
   .container
     max-width: 280px
@@ -66,6 +97,13 @@
   .hotel
     padding-top: 8px
     padding-bottom: 20px
+  .slider
+    height: 179px
+  .hotel
+    &__slider
+      margin-bottom: 20px
+  
+  
   
 
   
