--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -53,7 +53,7 @@
     line-height: 18px
 .swiper 
   width: 100%
-  height: 450px
+  height: 100%
   position: relative
   border-radius: 8px
   &::after
@@ -69,6 +69,7 @@
     z-index: 10
 .slider
   width: 728px
+  height: 450px
   &-button
     position: absolute
     top: 50%
@@ -167,7 +168,7 @@
   width: 347px
   height: 213px
   border-radius: 10px
-  background-color: #000
+  overflow: hidden
 
 
 
