added: section newsletter

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -10,7 +10,8 @@
         height: 100%
         object-fit: cover
 @media (max-width: 992px)
-  .container
+  .container, 
+  .newsletter-wrapper
     max-width: 700px
   .navbar
     &-top
@@ -89,6 +90,12 @@
     width: 100%
   .map
     width: 100%
+  .newsletter
+    padding: 76px 0 83px 0
+    &-wrapper
+      max-width: 576px
+      flex-direction: column
+      align-items: flex-start
 @media (max-width: 576px)
   .container
     max-width: 280px
@@ -102,6 +109,21 @@
   .hotel
     &__slider
       margin-bottom: 20px
+  .newsletter
+    padding: 76px 0 83px 0
+    &-wrapper
+      max-width: 280px
+    &-title
+      margin: 0
+      font-size: 20px
+      line-height: 25px
+      &__strong
+        margin-bottom: 37px
+        font-size: 30px
+        line-height: 38px
+  .subscribe
+    width: 100%
+
   
   
   
