--- a/sass/style.sass
+++ b/sass/style.sass
@@ -10,5 +10,7 @@
 @import 'blocks/breadcrumb'
 // Блок отель
 @import 'blocks/hotel'
+// Блок подптски
+@import 'blocks/newsletter'
 // Подключение стилей для адаптива
 @import 'media'
