create: add section reviews and fix swiper in hotel

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,8 +1,9 @@
 @media (max-width: 1200px)
   .container
     max-width: 960px
-  .slider
-    width: 590px
+  .hotel
+    &-slider
+      width: 590px
   .swiper
     &-slide
       &__image
@@ -36,8 +37,8 @@
       margin-bottom: 30px
     &-right
       flex-direction: row
-  .slider
-    width: 100%
+    &-slider
+      width: 100%
   .booking
     width: 340px
   .map
@@ -80,8 +81,8 @@
       &__offer
         order: -1
         margin-left: 0
-  .slider
-    height: 350px
+    &-slider
+      height: 350px
   .hotel
     &-right
       flex-direction: column
@@ -104,8 +105,8 @@
   .hotel
     padding-top: 8px
     padding-bottom: 20px
-  .slider
-    height: 179px
+    &-slider
+      height: 179px
   .hotel
     &__slider
       margin-bottom: 20px
