create: add reviews section and fix hotel-slider

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -12,5 +12,7 @@
 @import 'blocks/hotel'
 // Блок подптски
 @import 'blocks/newsletter'
+// Блок отзывы
+@import 'blocks/reviews'
 // Подключение стилей для адаптива
 @import 'media'
