--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -4,8 +4,8 @@
   .hotel
     &-slider
       width: 590px
-  .swiper
-    &-slide
+  .hotel
+    &-slider
       &__image
         width: 100%
         height: 100%
@@ -93,6 +93,11 @@
         margin-left: 0
     &-slider
       height: 350px
+      &__button
+        &--next
+          right: 10px
+        &--prev
+          left: 10px
   .hotel
     &-right
       flex-direction: column
