--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -1,10 +1,6 @@
 .newsletter
   position: relative
   padding: 98px 0 87px 0
-  background-image: url(../image/newsletter-bg.jpg)
-  background-repeat: no-repeat
-  background-position: center
-  background-size: cover
   &::before
     content: ''
     position: absolute
@@ -36,6 +32,14 @@
       font-size: 36px
       line-height: 45px
       text-transform: uppercase
+.parallax 
+  position: relative
+  background-attachment: fixed
+  background-position: center 0
+  background-repeat: no-repeat
+  background-size: cover
+  height: 100%
+
 .subscribe
   position: relative
   width: 350px
