--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -35,7 +35,7 @@
 .parallax 
   position: relative
   background-attachment: fixed
-  background-position: center 0
+  background-position: center 
   background-repeat: no-repeat
   background-size: cover
   height: 100%
