--- a/sass/style.sass
+++ b/sass/style.sass
@@ -14,5 +14,7 @@
 @import 'blocks/newsletter'
 // Блок отзывы
 @import 'blocks/reviews'
+// Блок развлечения
+@import 'blocks/activities'
 // Подключение стилей для адаптива
 @import 'media'
