create: add section packages

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -16,5 +16,7 @@
 @import 'blocks/reviews'
 // Блок развлечения
 @import 'blocks/activities'
+// Блок другие пакеты
+@import 'blocks/packages'
 // Подключение стилей для адаптива
 @import 'media'
