--- a/css/style.css
+++ b/css/style.css
@@ -1145,6 +1145,218 @@ template {
   line-height: 16px;
 }
 
+.packages__title {
+  margin-bottom: 65px;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 45px;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.packages-wrapper {
+  padding: 40px 0 70px;
+}
+
+.packages-grid {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: (500px)[2];
+      grid-template-rows: repeat(2, 500px);
+  -ms-grid-columns: (350px)[3];
+      grid-template-columns: repeat(3, 350px);
+  row-gap: 30px;
+  -webkit-column-gap: 30px;
+          column-gap: 30px;
+  color: #FFFFFF;
+}
+
+.packages-variant-1 {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 366px 364px;
+      grid-template-columns: 366px 364px;
+  -ms-grid-column: 1;
+      grid-column-start: 1;
+  -ms-grid-column-span: 2;
+      grid-column-end: span 2;
+}
+
+.packages-subvariant-1 {
+  position: relative;
+  border-radius: 8px 0px 0px 8px;
+  overflow: hidden;
+}
+
+.packages__image {
+  width: 366px;
+  height: 500px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.packages__image--small {
+  width: 350px;
+  height: 250px;
+}
+
+.packages__lable {
+  position: absolute;
+  padding: 8px 12px 7px 11px;
+  background-color: #EC1F46;
+  top: 26px;
+  left: 0;
+  border-radius: 0px 4px 4px 0px;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 15px;
+}
+
+.packages__lable--small {
+  position: absolute;
+  background-color: #EC1F46;
+  top: 26px;
+  left: 0;
+  border-radius: 0px 4px 4px 0px;
+  font-style: normal;
+  font-weight: 600;
+  padding: 4px 9px;
+  font-size: 8px;
+  line-height: 10px;
+}
+
+.packages-subvariant-2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 46px 21px 30px 43px;
+  background-color: #0A223D;
+  border-radius: 0px 8px 8px 0px;
+}
+
+.packages-stars__icon {
+  width: 6px;
+  height: 6px;
+}
+
+.packages__hotel-name {
+  margin-top: 6px;
+  margin-bottom: 27px;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 23px;
+}
+
+.packages__hotel-name--small {
+  margin-top: 0;
+  margin-bottom: 23px;
+}
+
+.packages__info {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 160.6%;
+  margin-bottom: 34px;
+}
+
+.packages__room {
+  margin-bottom: 37px;
+}
+
+.packages__room--small {
+  margin-bottom: 24px;
+}
+
+.packages__icon {
+  margin-right: 15.17px;
+}
+
+.packages__description {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 15px;
+}
+
+.packages-futer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: end;
+}
+
+.packages__price {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.packages__pricetag {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 30px;
+}
+
+.packages__pricetag--through {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 18px;
+  -webkit-text-decoration-line: line-through;
+          text-decoration-line: line-through;
+  margin-bottom: 5px;
+}
+
+.packages__button {
+  width: 120px;
+  height: 40px;
+  background-color: #EC1F46;
+  color: inherit;
+  font-family: Nunito, sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 19px;
+  border-radius: 4px;
+  border: none;
+}
+
+.packages-variant-2 {
+  display: -ms-grid;
+  display: grid;
+  border-radius: 8px;
+  overflow: hidden;
+}
+
+.packages-subvariant-3 {
+  position: relative;
+  height: 250px;
+}
+
+.packages-subvariant-4 {
+  padding: 30px 21px 25px 32px;
+  height: 250px;
+  background-color: #0A223D;
+}
+
 @media (max-width: 1200px) {
   .container {
     max-width: 960px;
