--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -20,6 +20,18 @@
       &__button
         top: 180px
         left: 15px
+  .packages
+    &-grid
+      grid-template-columns: repeat(3, 310px)
+      column-gap: 15px
+    &-variant-1
+      grid-template-columns: 310px 310px 
+    &__hotel-name
+      margin-bottom: 0
+    &__info 
+      margin-bottom: 10px
+    &__room
+      margin-bottom: 24px
 @media (max-width: 992px)
   .container, 
   .newsletter-wrapper
@@ -77,6 +89,13 @@
       &__button
         top: 201px
         left: 24px
+  .packages
+    &-grid
+     grid-template-rows: repeat(2, 500px)
+     grid-template-columns: repeat(2, 340px) 
+     row-gap: 15px
+    &-variant-1
+      display: none
 @media (max-width: 767px)
   .container
     max-width: 576px
@@ -164,6 +183,12 @@
       &__button
         top: 201px
         left: 24px
+  .packages
+    &-grid
+     grid-template-rows: repeat(2, 500px)
+     grid-template-columns: repeat(2, 285px) 
+     row-gap: 6px
+     column-gap: 6px
 @media (max-width: 576px)
   .container
     max-width: 280px
@@ -202,7 +227,18 @@
   .activities
     &-info
       height: 1090px
-  
+  .packages
+    &-wrapper
+      padding: 20 0 40px
+    &__title
+     font-size: 18px
+     line-height: 23px 
+     margin-bottom: 35px
+    &-grid
+     grid-template-rows: repeat(2, 500px)
+     grid-template-columns: repeat(1, 280px) 
+     row-gap: 6px
+     column-gap: 6px
   
   
 
