create: add footer

--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -29,6 +29,10 @@
       line-height: 18px
 .logo
   width: 177px
+  height: 24px
+  &__image
+    width: 100%
+    height: 100%
 .search
   display: flex
   position: relative
@@ -55,6 +59,9 @@
     border: none
     outline: none
     background-color: $primary
+  &__image
+    display: block
+    margin: auto
 .user
   display: flex
   align-items: center
