--- a/sass/style.sass
+++ b/sass/style.sass
@@ -18,5 +18,7 @@
 @import 'blocks/activities'
 // Блок другие пакеты
 @import 'blocks/packages'
+// Блок подвал
+@import 'blocks/footer'
 // Подключение стилей для адаптива
 @import 'media'
