create: media in footer

--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -5,7 +5,7 @@
     display: grid
     grid-template-columns: repeat(4, minmax(min-content, 1fr))
     padding: 108px 0 46px 0
-    grid-gap: 20px 
+    grid-gap: 20px
     grid-auto-rows: minmax(98px, min-content)
   &__logo
     margin-top: 31px
@@ -18,7 +18,7 @@
       display: flex
       justify-content: space-between
       align-items: center
-      min-width: 293px
+      width: 293px
       max-height: 23px
     &-links
       display: flex
@@ -144,7 +144,7 @@
     width: 283px
     display: flex
     justify-content: space-between
-    margin-left: 257px
+    margin-left: 185px
 
 
 
