--- a/css/style.css
+++ b/css/style.css
@@ -1411,7 +1411,7 @@ template {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  min-width: 293px;
+  width: 293px;
   max-height: 23px;
 }
 
@@ -1619,7 +1619,7 @@ template {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  margin-left: 257px;
+  margin-left: 185px;
 }
 
 @media (max-width: 1200px) {
@@ -1756,6 +1756,57 @@ template {
   }
   .packages-variant-1 {
     display: none;
+  }
+  .footer-wrapper {
+    -ms-grid-columns: (minmax(220px, 1fr))[3];
+        grid-template-columns: repeat(3, minmax(220px, 1fr));
+    padding: 77px 0 33px 0;
+  }
+  .footer__logo {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1 / 2;
+    width: 104px;
+    height: 120px;
+  }
+  .footer__social-network {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1 / 2;
+    grid-column: span 3;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+  }
+  .footer__categories {
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2 / 3;
+  }
+  .footer__contact-details {
+    grid-column: span 3;
+    -ms-grid-row: 3;
+    grid-row: 3;
+  }
+  .footer__contact-form {
+    grid-column: span 3;
+    -ms-grid-row: 4;
+    grid-row: 4;
+    width: 539px;
+  }
+  .footer__input {
+    -ms-flex-preferred-size: 49%;
+        flex-basis: 49%;
+  }
+  .footer__bottom {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-column: 1 / 3;
+    -ms-grid-column-align: start;
+        justify-self: start;
+  }
+  .footer__breadcrumb {
+    margin-left: 0;
   }
 }
 
@@ -1898,6 +1949,80 @@ template {
     -webkit-column-gap: 6px;
             column-gap: 6px;
   }
+  .footer-wrapper {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    -ms-grid-rows: 150px 97px 157px 201px 258px 391px 416px 25px 22px;
+        grid-template-rows: 150px 97px 157px 201px 258px 391px 416px 25px 22px;
+    padding: 69px 0 33px 0;
+    row-gap: 0;
+  }
+  .footer__logo {
+    -ms-grid-row: 1;
+    grid-row: 1;
+    -ms-grid-column: 1;
+    grid-column: 1;
+  }
+  .footer__social-network {
+    -ms-grid-row: 2;
+    grid-row: 2;
+    -ms-grid-column: 1;
+    grid-column: 1;
+    display: block;
+  }
+  .footer__social-links {
+    width: 83px;
+  }
+  .footer__legal {
+    -ms-grid-row: 3;
+    grid-row: 3;
+    -ms-grid-column: 1;
+    grid-column: 1;
+    -ms-grid-column-align: start;
+        justify-self: start;
+  }
+  .footer__additional {
+    -ms-grid-row: 4;
+    grid-row: 4;
+    -ms-grid-column: 1;
+    grid-column: 1;
+  }
+  .footer__categories {
+    -ms-grid-row: 5;
+    grid-row: 5;
+    -ms-grid-column: 1;
+    grid-column: 1;
+  }
+  .footer__contact-details {
+    -ms-grid-row: 6;
+    grid-row: 6;
+    -ms-grid-column: 1;
+    grid-column: 1;
+  }
+  .footer__contact-form {
+    -ms-grid-row: 7;
+    grid-row: 7;
+    -ms-grid-column: 1;
+    grid-column: 1;
+  }
+  .footer__bottom {
+    -ms-grid-row: 8;
+    grid-row: 8;
+    -ms-grid-column: 1;
+    grid-column: 1;
+  }
+  .footer__payment {
+    -ms-grid-row: 9;
+    grid-row: 9;
+    -ms-grid-column: 1;
+    grid-column: 1;
+    -ms-grid-column-align: start;
+        justify-self: start;
+  }
+  .footer__input {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+  }
 }
 
 @media (max-width: 576px) {
@@ -1964,6 +2089,12 @@ template {
     row-gap: 6px;
     -webkit-column-gap: 6px;
             column-gap: 6px;
+  }
+  .footer__contact-details {
+    max-width: 280px;
+  }
+  .footer__contact-form {
+    max-width: 280px;
   }
 }
 /*# sourceMappingURL=style.css.map */
