--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -96,6 +96,38 @@
      row-gap: 15px
     &-variant-1
       display: none
+  .footer
+    &-wrapper
+      grid-template-columns: repeat(3, minmax(220px, 1fr))
+      padding: 77px 0 33px 0
+    &__logo
+      grid-row: 1 / 2
+      width: 104px
+      height: 120px
+    &__social
+      &-network
+        grid-row: 1 / 2
+        grid-column: span 3
+        align-self: center
+    &__categories
+      grid-row: 2 / 3
+    &__contact
+      &-details
+        grid-column: span 3
+        grid-row: 3
+      &-form
+        grid-column: span 3
+        grid-row: 4
+        width: 539px
+    &__input
+      flex-basis: 49%
+    &__bottom 
+      grid-column: 1 / 3 
+      justify-self: start 
+    &__breadcrumb
+      margin-left: 0
+  
+  
 @media (max-width: 767px)
   .container
     max-width: 576px
@@ -189,7 +221,49 @@
      grid-template-columns: repeat(2, 285px) 
      row-gap: 6px
      column-gap: 6px
-@media (max-width: 576px)
+  .footer
+    &-wrapper
+      grid-template-columns: 1fr
+      grid-template-rows: 150px 97px 157px 201px 258px 391px 416px 25px 22px
+      padding: 69px 0 33px 0
+      row-gap: 0
+    &__logo
+      grid-row: 1
+      grid-column: 1
+    &__social
+      &-network
+        grid-row: 2
+        grid-column: 1
+        display: block
+      &-links
+        width: 83px
+    &__legal
+      grid-row: 3
+      grid-column: 1
+      justify-self: start
+    &__additional
+      grid-row: 4
+      grid-column: 1
+    &__categories
+      grid-row: 5
+      grid-column: 1
+    &__contact
+      &-details
+        grid-row: 6
+        grid-column: 1
+      &-form
+        grid-row: 7
+        grid-column: 1
+    &__bottom
+      grid-row: 8
+      grid-column: 1
+    &__payment
+      grid-row: 9
+      grid-column: 1
+      justify-self: start
+    &__input
+      flex-basis: 100%
+@media (max-width: 576px) 
   .container
     max-width: 280px
   .logo
@@ -239,6 +313,13 @@
      grid-template-columns: repeat(1, 280px) 
      row-gap: 6px
      column-gap: 6px
+  .footer
+    &__contact
+      &-details
+        max-width: 280px
+    &__contact
+      &-form
+        max-width: 280px
   
   
 
