--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -131,9 +131,50 @@
 @media (max-width: 767px)
   .container
     max-width: 576px
+  body
+    padding-top: 84px
   .navbar
-    &-menu, &__search, &__user
+    &--mobile
+      &-fixed
+        position: fixed
+        left: 0
+        top: 0
+        right: 0
+        z-index: 99
+    &__user, &__search
+      &--mobile
+        &-hidden
+          display: none
+        &-visible
+          display: flex
+    &-bottom
       display: none
+      position: fixed
+      left: 0
+      right: 0
+      bottom: 0
+      top: 78px
+      padding-top: 31px
+      &--visible
+        display: block
+    &-menu
+      flex-direction: column
+      &__item
+        margin-bottom: 20px
+        &--mobile
+          &-visible
+            display: block
+  .user
+    flex-direction: column
+    justify-content: space-between
+    align-items: center
+    height: 68px
+    &__name
+      color: $light
+      margin: 0
+  .search
+    &__input
+      width: 243px
   .menu
     &-button
       display: flex
