--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -27,6 +27,10 @@
       text-transform: uppercase
       font-size: 14px
       line-height: 18px
+    &__item
+      &--mobile
+        &-visible
+          display: none
 .logo
   width: 177px
   height: 24px
@@ -76,6 +80,7 @@
     font-size: 14px
     line-height: 18px
     color: $text-color
+
 
 
 
