--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -1,11 +1,12 @@
 .hotel
   padding-top: 23px
   padding-bottom: 70px
+  &__header
+    margin-bottom: 20px
   &-info
     display: flex
     align-items: center
     justify-content: space-between
-    padding-bottom: 20px
   &-wrapper
     display: flex
     flex-wrap: wrap
@@ -77,7 +78,11 @@
         left: 18px
         background-image: url(../image/arrow-prev.svg)
 .stars
+  display: flex
   flex-basis: 100%
+  &__icon
+    & + &
+      margin-left: 2px
 .rating
   max-width: 65px
   min-height: 45px
@@ -89,15 +94,18 @@
     font-size: 8px
     line-height: 10px
   &__counter
+    vertical-align: bottom
     font-size: 14px
     line-height: 18px
+    &--sub
+      font-size: 10px  
 .booking
   background: $dark
   color: $light
   border-radius: 8px
-  padding: 28px
+  padding: 29px 29px 26px 26px
   width: 350px
-  min-height: 210px
+  max-height: 210px
   &__info
     display: flex
     justify-content: space-between
