--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -20,6 +20,7 @@
   &__container
     margin: auto
   &-title
+    margin: 0
     display: flex
     flex-direction: column
     color: $light
@@ -66,5 +67,8 @@
     border: none
     background-color: $primary
     color: $light
-
+    font-style: normal
+    font-weight: bold
+    font-size: 12px
+    line-height: 15px
 
