--- a/css/style.css
+++ b/css/style.css
@@ -530,6 +530,10 @@ template {
   padding-bottom: 70px;
 }
 
+.hotel__header {
+  margin-bottom: 20px;
+}
+
 .hotel-info {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -540,7 +544,6 @@ template {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding-bottom: 20px;
 }
 
 .hotel-wrapper {
@@ -658,8 +661,15 @@ template {
 }
 
 .stars {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -ms-flex-preferred-size: 100%;
       flex-basis: 100%;
+}
+
+.stars__icon + .stars__icon {
+  margin-left: 2px;
 }
 
 .rating {
@@ -677,17 +687,22 @@ template {
 }
 
 .rating__counter {
+  vertical-align: bottom;
   font-size: 14px;
   line-height: 18px;
+}
+
+.rating__counter--sub {
+  font-size: 10px;
 }
 
 .booking {
   background: #0A223D;
   color: #FFFFFF;
   border-radius: 8px;
-  padding: 28px;
+  padding: 29px 29px 26px 26px;
   width: 350px;
-  min-height: 210px;
+  max-height: 210px;
 }
 
 .booking__info {
@@ -854,6 +869,7 @@ template {
 }
 
 .newsletter-title {
+  margin: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -914,6 +930,10 @@ template {
   border: none;
   background-color: #EC1F46;
   color: #FFFFFF;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 15px;
 }
 
 .reviews {
@@ -929,6 +949,7 @@ template {
   text-transform: uppercase;
   color: #333333;
   margin-bottom: 70px;
+  margin-top: 0;
 }
 
 .reviews-slider {
@@ -1033,6 +1054,7 @@ template {
   font-size: 12px;
   line-height: 15px;
   color: #EC1F46;
+  margin-top: 0;
   margin-bottom: 10px;
 }
 
@@ -1054,12 +1076,18 @@ template {
 }
 
 .reviews-slider__text {
+  margin: 0;
   max-width: 537px;
   font-style: normal;
   font-weight: normal;
   font-size: 12px;
   line-height: 160%;
   text-align: justify;
+  color: #333333;
+}
+
+.reviews__icon + .reviews__icon {
+  margin-left: 2px;
 }
 
 .activities {
@@ -1122,6 +1150,7 @@ template {
   bottom: 0;
   left: 0;
   background: linear-gradient(179.83deg, rgba(196, 196, 196, 0) 35.34%, #0A223D 99.85%);
+  z-index: 1;
 }
 
 .activities-variant__img {
@@ -1161,6 +1190,7 @@ template {
 }
 
 .packages__title {
+  margin-top: 0;
   margin-bottom: 65px;
   font-style: normal;
   font-weight: bold;
@@ -1380,11 +1410,11 @@ template {
 .footer-wrapper {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (minmax(min-content, 1fr))[4];
-      grid-template-columns: repeat(4, minmax(-webkit-min-content, 1fr));
-      grid-template-columns: repeat(4, minmax(min-content, 1fr));
+  -ms-grid-columns: 285px 285px 345px 195px;
+      grid-template-columns: 285px 285px 345px 195px;
+  -ms-grid-rows: 195px 117px 419px 22px;
+      grid-template-rows: 195px 117px 419px 22px;
   padding: 108px 0 46px 0;
-  grid-gap: 20px;
   grid-auto-rows: minmax(98px, -webkit-min-content);
   grid-auto-rows: minmax(98px, min-content);
 }
@@ -1475,6 +1505,10 @@ template {
   text-transform: uppercase;
 }
 
+.footer__title--mb-3 {
+  margin-bottom: 34px;
+}
+
 .footer__title--inline {
   margin: 0;
 }
@@ -1535,6 +1569,7 @@ template {
   font-size: 14px;
   line-height: 160%;
   color: #BDBDBD;
+  margin-top: 0;
   margin-bottom: 22px;
 }
 
