--- a/sass/blocks/_activities.sass
+++ b/sass/blocks/_activities.sass
@@ -33,6 +33,7 @@
       bottom: 0
       left: 0
       background: linear-gradient(179.83deg, rgba(196, 196, 196, 0) 35.34%, #0A223D 99.85%)
+      z-index: 1
     &__img
       width: 100%
       height: 100%
