--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -128,6 +128,7 @@
     font-weight: bold
     font-size: 12px
     line-height: 15px
+    cursor: pointer
   &__info
     font-style: normal
     font-weight: bold
