--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -138,7 +138,9 @@
       margin-top: 0
     &__payment
      grid-column: 4 / 5 
-  
+  .modal
+    &__dialog
+      padding: 30px 75px
   
 @media (max-width: 767px)
   .container
@@ -316,6 +318,12 @@
       justify-self: start
     &__input
       flex-basis: 100%
+  .modal
+    &__dialog
+      padding: 30px 70px
+    &__button
+      margin-bottom: 15px
+      width: 100%
 @media (max-width: 576px) 
   .container
     max-width: 280px
@@ -373,7 +381,7 @@
     &__contact
       &-form
         max-width: 280px
-  
-  
-
+  .modal
+    &__dialog
+      padding: 15px 10px
   
