--- a/sass/style.sass
+++ b/sass/style.sass
@@ -20,5 +20,7 @@
 @import 'blocks/packages'
 // Блок подвал
 @import 'blocks/footer'
+// Блок модальные окна
+@import 'blocks/modals'
 // Подключение стилей для адаптива
 @import 'media'
