--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -108,6 +108,10 @@
     height: 50px
     margin-bottom: 15px
     flex-basis: 48%
+    font-style: normal
+    font-weight: normal
+    font-size: 12px
+    line-height: 15px
   &__message
     background-color: #fff
     border-radius: 4px
@@ -116,6 +120,10 @@
     flex-basis: 100%
     height: 123px
     margin-bottom: 23px
+    font-style: normal
+    font-weight: normal
+    font-size: 12px
+    line-height: 15px
   &__button
     padding-top: 17px
     padding-bottom: 18px
