fix: add scrol and botton-home in hotel

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -171,6 +171,7 @@
       padding-top: 31px
       &--visible
         display: block
+        overflow-x: scroll
     &-menu
       flex-direction: column
       &__item
