--- a/css/style.css
+++ b/css/style.css
@@ -833,6 +833,26 @@ template {
   overflow: hidden;
 }
 
+.button-home {
+  width: 50%;
+  margin-top: 10px;
+  height: 50px;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 19px;
+  background-color: #EC1F46;
+  color: #FFFFFF;
+  border: none;
+  border-radius: 4px;
+}
+
+.button-home__link {
+  text-decoration: none;
+  color: inherit;
+  text-transform: uppercase;
+}
+
 .newsletter {
   position: relative;
   padding: 98px 0 87px 0;
@@ -2038,6 +2058,7 @@ template {
   }
   .navbar-bottom--visible {
     display: block;
+    overflow-x: scroll;
   }
   .navbar-menu {
     -webkit-box-orient: vertical;
