--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -179,6 +179,25 @@
   height: 213px
   border-radius: 10px
   overflow: hidden
+.button
+  &-home
+    width: 50%
+    margin-top: 10px
+    height: 50px
+    font-style: normal
+    font-weight: 600
+    font-size: 14px
+    line-height: 19px
+    background-color: $primary
+    color: $light
+    border: none
+    border-radius: 4px
+    &__link
+      text-decoration: none
+      color: inherit
+      text-transform: uppercase
+
+
 
 
 
