--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -11,3 +11,9 @@ img
   max-width: 100%
 .booking
   font-family: 'Nunito', sans-serif
+.invalid
+  color: $primary
+  font-style: normal
+  font-weight: normal
+  font-size: 12px
+  line-height: 15px
