--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,14 @@ img {
   font-family: 'Nunito', sans-serif;
 }
 
+.invalid {
+  color: #EC1F46;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 15px;
+}
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -923,7 +931,7 @@ template {
 .subscribe {
   position: relative;
   width: 350px;
-  height: 55px;
+  min-height: 55px;
   border-radius: 4px;
   overflow: hidden;
 }
@@ -1608,18 +1616,22 @@ template {
 }
 
 .footer__input {
+  width: 100%;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 15px;
   background: #FFFFFF;
   border-radius: 4px;
   border: none;
   padding: 0 23px;
   height: 50px;
+}
+
+.footer__input-group {
   margin-bottom: 15px;
   -ms-flex-preferred-size: 48%;
       flex-basis: 48%;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 12px;
-  line-height: 15px;
 }
 
 .footer__message {
@@ -1737,8 +1749,7 @@ template {
   font-weight: bold;
   font-size: 18px;
   line-height: 23px;
-  margin-top: 0;
-  margin-bottom: 15px;
+  margin: 0;
   text-transform: uppercase;
   text-align: center;
 }
@@ -1755,7 +1766,7 @@ template {
   border: none;
   padding: 0 23px;
   height: 50px;
-  margin-bottom: 15px;
+  margin-top: 15px;
   width: 100%;
   font-style: normal;
   font-weight: normal;
@@ -1770,7 +1781,7 @@ template {
   padding: 18px 23px;
   width: 100%;
   height: 123px;
-  margin-bottom: 15px;
+  margin-top: 15px;
   font-style: normal;
   font-weight: normal;
   font-size: 12px;
@@ -1798,6 +1809,7 @@ template {
   background-color: #EC1F46;
   color: inherit;
   border: none;
+  margin-top: 15px;
   border-radius: 4px;
   font-style: normal;
   font-weight: bold;
@@ -1998,7 +2010,7 @@ template {
     grid-row: 4;
     width: 539px;
   }
-  .footer__input {
+  .footer__input-group {
     -ms-flex-preferred-size: 49%;
         flex-basis: 49%;
   }
@@ -2227,8 +2239,8 @@ template {
   .footer-wrapper {
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
-    -ms-grid-rows: 150px 97px 157px 201px 258px 391px 416px 25px 22px;
-        grid-template-rows: 150px 97px 157px 201px 258px 391px 416px 25px 22px;
+    -ms-grid-rows: 150px 97px 157px 201px 258px 296px 416px 25px 22px;
+        grid-template-rows: 150px 97px 157px 201px 258px 296px 416px 25px 22px;
     padding: 69px 0 33px 0;
     row-gap: 0;
   }
@@ -2294,7 +2306,7 @@ template {
     -ms-grid-column-align: start;
         justify-self: start;
   }
-  .footer__input {
+  .footer__input-group {
     -ms-flex-preferred-size: 100%;
         flex-basis: 100%;
   }
@@ -2371,6 +2383,10 @@ template {
     row-gap: 6px;
     -webkit-column-gap: 6px;
             column-gap: 6px;
+  }
+  .footer-wrapper {
+    -ms-grid-rows: 150px 97px 157px 201px 258px 390px 416px 25px 22px;
+        grid-template-rows: 150px 97px 157px 201px 258px 390px 416px 25px 22px;
   }
   .footer__contact-details {
     max-width: 280px;
