--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -101,17 +101,19 @@
       vertical-align: middle
       min-width: 38.13px
   &__input
+    width: 100%
+    font-style: normal
+    font-weight: normal
+    font-size: 12px
+    line-height: 15px
     background: #FFFFFF
     border-radius: 4px
     border: none
     padding: 0 23px
     height: 50px
-    margin-bottom: 15px
-    flex-basis: 48%
-    font-style: normal
-    font-weight: normal
-    font-size: 12px
-    line-height: 15px
+    &-group
+      margin-bottom: 15px
+      flex-basis: 48%
   &__message
     background-color: #fff
     border-radius: 4px
