--- a/sass/blocks/_modals.sass
+++ b/sass/blocks/_modals.sass
@@ -36,8 +36,7 @@
     font-weight: bold
     font-size: 18px
     line-height: 23px
-    margin-top: 0
-    margin-bottom: 15px
+    margin: 0
     text-transform: uppercase
     text-align: center
   &__close 
@@ -50,7 +49,7 @@
     border: none
     padding: 0 23px
     height: 50px
-    margin-bottom: 15px
+    margin-top: 15px
     width: 100%
     font-style: normal
     font-weight: normal
@@ -63,7 +62,7 @@
     padding: 18px 23px
     width: 100%
     height: 123px
-    margin-bottom: 15px
+    margin-top: 15px
     font-style: normal
     font-weight: normal
     font-size: 12px
@@ -80,6 +79,7 @@
     background-color: $primary
     color: inherit
     border: none
+    margin-top: 15px
     border-radius: 4px
     font-style: normal
     font-weight: bold
@@ -91,4 +91,5 @@
     font-weight: bold
     font-size: 12px
     line-height: 15px
-  
+
+    
