fix form in .subscribe

--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -17,3 +17,11 @@ img
   font-weight: normal
   font-size: 12px
   line-height: 15px
+.invalid-1
+  bottom: 0
+  left: 0
+  color: $primary
+  font-style: normal
+  font-weight: normal
+  font-size: 12px
+  line-height: 15px
