--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,16 @@ img {
   line-height: 15px;
 }
 
+.invalid-1 {
+  bottom: 0;
+  left: 0;
+  color: #EC1F46;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 15px;
+}
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -932,14 +942,15 @@ template {
   position: relative;
   width: 350px;
   min-height: 55px;
-  border-radius: 4px;
-  overflow: hidden;
+}
+
+.subscribe label {
+  width: 100%;
 }
 
 .subscribe__input {
-  position: absolute;
   width: 100%;
-  height: 100%;
+  height: 55px;
   border: none;
   padding-left: 33px;
   padding-right: 70px;
@@ -947,6 +958,7 @@ template {
   font-weight: 300;
   font-size: 14px;
   line-height: 18px;
+  border-radius: 4px;
 }
 
 .subscribe__button {
@@ -954,7 +966,7 @@ template {
   right: 0;
   min-width: 65px;
   top: 0;
-  height: 100%;
+  height: 55px;
   border: none;
   background-color: #EC1F46;
   color: #FFFFFF;
@@ -963,6 +975,7 @@ template {
   font-size: 12px;
   line-height: 15px;
   cursor: pointer;
+  border-radius: 0 4px 4px 0;
 }
 
 .reviews {
