fix body pix on pix

--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -105,13 +105,15 @@
   border-radius: 8px
   padding: 29px 29px 26px 26px
   width: 350px
-  max-height: 210px
+  min-height: 210px
   &__info
     display: flex
     justify-content: space-between
   &__price
     display: flex
     flex-direction: column
+    max-width: 86px
+    min-width: 59px
   &__start
     font-weight: normal
     font-size: 10px
@@ -128,6 +130,7 @@
     line-height: 16px
   &__room
     margin-top: 4px
+    max-width: 80.22px
   &__text
     display: flex
     align-items: center
