--- a/css/style.css
+++ b/css/style.css
@@ -720,7 +720,7 @@ template {
   border-radius: 8px;
   padding: 29px 29px 26px 26px;
   width: 350px;
-  max-height: 210px;
+  min-height: 210px;
 }
 
 .booking__info {
@@ -740,6 +740,8 @@ template {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  max-width: 86px;
+  min-width: 59px;
 }
 
 .booking__start {
@@ -764,6 +766,7 @@ template {
 
 .booking__room {
   margin-top: 4px;
+  max-width: 80.22px;
 }
 
 .booking__text {
@@ -1291,6 +1294,8 @@ template {
 .packages__lable {
   position: absolute;
   padding: 8px 12px 7px 11px;
+  width: 95px;
+  height: 30px;
   background-color: #EC1F46;
   top: 26px;
   left: 0;
@@ -1307,9 +1312,11 @@ template {
   top: 26px;
   left: 0;
   border-radius: 0px 4px 4px 0px;
+  padding: 4px 9px;
+  width: 61px;
+  height: 18px;
   font-style: normal;
   font-weight: 600;
-  padding: 4px 9px;
   font-size: 8px;
   line-height: 10px;
 }
@@ -1327,13 +1334,27 @@ template {
   border-radius: 0px 8px 8px 0px;
 }
 
+.packages-stars {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 48px;
+  height: 8px;
+}
+
 .packages-stars__icon {
-  width: 6px;
-  height: 6px;
+  width: 8px;
+  height: 8px;
 }
 
 .packages__hotel-name {
-  margin-top: 6px;
+  margin-top: 5px;
   margin-bottom: 27px;
   font-style: normal;
   font-weight: bold;
@@ -1347,14 +1368,17 @@ template {
 }
 
 .packages__info {
+  height: 160px;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
   line-height: 160.6%;
+  margin-top: 0;
   margin-bottom: 34px;
 }
 
 .packages__room {
+  margin-left: 2px;
   margin-bottom: 37px;
 }
 
@@ -1363,7 +1387,7 @@ template {
 }
 
 .packages__icon {
-  margin-right: 15.17px;
+  margin-right: 14px;
 }
 
 .packages__description {
@@ -1442,6 +1466,26 @@ template {
   padding: 30px 21px 25px 32px;
   height: 250px;
   background-color: #0A223D;
+}
+
+.packages__geolocation {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 11px;
+}
+
+.packages__text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 11px;
 }
 
 .footer {
@@ -1977,6 +2021,9 @@ template {
   .packages-variant-1 {
     display: none;
   }
+  .packages__title {
+    text-align: left;
+  }
   .footer-wrapper {
     -ms-grid-columns: 186px 14px 298px 202px;
         grid-template-columns: 186px 14px 298px 202px;
@@ -2384,9 +2431,10 @@ template {
     padding: 20 0 40px;
   }
   .packages__title {
-    font-size: 18px;
-    line-height: 23px;
-    margin-bottom: 35px;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 30px;
   }
   .packages-grid {
     -ms-grid-rows: (500px)[2];
