--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -99,6 +99,8 @@
      row-gap: 15px
     &-variant-1
       display: none
+    &__title
+      text-align: left
   .footer
     &-wrapper
       grid-template-columns: 186px 14px 298px 202px
@@ -369,9 +371,10 @@
     &-wrapper
       padding: 20 0 40px
     &__title
-     font-size: 18px
-     line-height: 23px 
-     margin-bottom: 35px
+      font-style: normal
+      font-weight: bold
+      font-size: 24px
+      line-height: 30px
     &-grid
      grid-template-rows: repeat(2, 500px)
      grid-template-columns: repeat(1, 280px) 
