--- a/sass/blocks/_packages.sass
+++ b/sass/blocks/_packages.sass
@@ -36,6 +36,8 @@
   &__lable
     position: absolute
     padding: 8px 12px 7px 11px
+    width: 95px
+    height: 30px
     background-color: $primary
     top: 26px
     left: 0
@@ -50,9 +52,11 @@
       top: 26px
       left: 0
       border-radius: 0px 4px 4px 0px
+      padding: 4px 9px
+      width: 61px
+      height: 18px
       font-style: normal
       font-weight: 600
-      padding: 4px 9px
       font-size: 8px
       line-height: 10px
   &-subvariant-2
@@ -62,11 +66,16 @@
     background-color: $dark
     border-radius: 0px 8px 8px 0px
   &-stars
+    display: flex
+    align-items: start
+    justify-content: space-between
+    width: 48px
+    height: 8px
     &__icon
-      width: 6px
-      height: 6px 
+      width: 8px
+      height: 8px 
   &__hotel-name
-    margin-top: 6px
+    margin-top: 5px
     margin-bottom: 27px
     font-style: normal
     font-weight: bold
@@ -76,17 +85,20 @@
       margin-top: 0
       margin-bottom: 23px
   &__info
+    height: 160px
     font-style: normal
     font-weight: normal
     font-size: 14px
     line-height: 160.6%
+    margin-top: 0
     margin-bottom: 34px
   &__room
+    margin-left: 2px
     margin-bottom: 37px
     &--small
       margin-bottom: 24px
   &__icon
-    margin-right: 15.17px
+    margin-right: 14px
   &__description
     font-style: normal
     font-weight: normal
@@ -134,6 +146,11 @@
     padding: 30px 21px 25px 32px
     height: 250px
     background-color: $dark
-  &-variant-4
- 
-  &-variant-5 
+  &__geolocation
+    display: flex
+    align-items: center
+    margin-bottom: 11px
+  &__text
+    display: flex
+    align-items: center
+    margin-bottom: 11px
