--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -145,7 +145,7 @@
     &__dialog
       padding: 30px 75px
   
-@media (max-width: 767px)
+@media (max-width: 768px)
   .container
     max-width: 576px
   body
@@ -330,6 +330,9 @@
       margin-bottom: 15px
       width: 100%
 @media (max-width: 576px) 
+  .navbar
+    &-top
+      padding: 28px 0 28.58px
   .container
     max-width: 280px
   .logo
