--- a/sass/blocks/_packages.sass
+++ b/sass/blocks/_packages.sass
@@ -24,6 +24,7 @@
     grid-column-end: span 2
   &-subvariant-1
     position: relative
+    height: 500px
     border-radius: 8px 0px 0px 8px
     overflow: hidden
   &__image
@@ -62,6 +63,7 @@
   &-subvariant-2
     display: flex
     flex-direction: column
+    height: 500px
     padding: 46px 21px 30px 43px
     background-color: $dark
     border-radius: 0px 8px 8px 0px
@@ -85,7 +87,7 @@
       margin-top: 0
       margin-bottom: 23px
   &__info
-    height: 160px
+    min-height: 160px
     font-style: normal
     font-weight: normal
     font-size: 14px
