--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -115,6 +115,7 @@
     max-width: 97px
     min-width: 59px
   &__start
+    font-style: normal
     font-weight: normal
     font-size: 10px
     line-height: 14px
@@ -128,6 +129,7 @@
     font-weight: normal
     font-size: 12px
     line-height: 16px
+    margin-top: -4px
   &__room
     margin-top: 4px
     max-width: 81.22px
