--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -63,6 +63,8 @@
     border: none
     outline: none
     background-color: $primary
+    &:hover
+      background-color: #630700
   &__image
     display: block
     margin: auto
