--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -25,3 +25,11 @@ img
   font-weight: normal
   font-size: 12px
   line-height: 15px
+button
+  cursor: pointer
+.button
+  &:hover
+    background-color: #630700
+a
+  &:hover
+    color: #adfffb
