--- a/sass/blocks/_packages.sass
+++ b/sass/blocks/_packages.sass
@@ -12,7 +12,7 @@
     padding: 40px 0 70px
   &-grid
     display: grid
-    grid-template-rows: repeat(2, 500px)
+    grid-template-rows: repeat(2, minmax(500px, 1fr))
     grid-template-columns: repeat(3, 350px)
     row-gap: 30px
     column-gap: 30px
@@ -95,6 +95,7 @@
     margin-top: 0
     margin-bottom: 34px
   &__room
+    min-height: 67px
     margin-left: 2px
     margin-bottom: 37px
     &--small
