--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,3 +1,10 @@
+@media (min-width: 991px)
+  .button
+    &:hover
+      background-color: #630700
+  a
+    &:hover
+      color: #adfffb
 @media (max-width: 1200px)
   .container
     max-width: 960px
