fix off AOS in mobile

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -5,6 +5,8 @@
   a
     &:hover
       color: #adfffb
+  #data-aos
+    animation: none
 @media (max-width: 1200px)
   .container
     max-width: 960px
