--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -1,5 +1,7 @@
 *
   box-sizing: border-box
+html 
+  scroll-behavior: smooth
 body
   font-family: 'Mulish', sans-serif
   background-color: $secondary
@@ -27,3 +29,12 @@ img
   line-height: 15px
 button
   cursor: pointer
+.up
+  width: 70px
+  height: 70px
+  position: fixed
+  fill: $primary
+  bottom: 10px
+  right: 10px
+  z-index: 99
+
