fix: add scroll in modal

--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -6,6 +6,9 @@ body
   font-family: 'Mulish', sans-serif
   background-color: $secondary
   color: $text-color
+.body
+  &--hidden
+    overflow: hidden
 .container
   max-width: 1110px
   margin: auto
